--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.8'
 services:
   client-frontend:
-    image: frontend:0.0.1
+    image: atmm/library-frontend:0.0.1
     build: ./frontend
     restart: always
     ports:
@@ -11,7 +11,7 @@ services:
       - ./frontend:/app
 
   client-backend:
-    image: client:0.0.1
+    image: atmm/library-backend:0.0.1
     build:
       context: .
       dockerfile: Dockerfile
